add landing page

--- a/index.html
+++ b/index.html
@@ -18,6 +18,32 @@
 </head>
 
 <body>
+
+  <h1>Hello, world</h1>
+  <ul>
+    <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae commodi culpa cumque eaque esse, expedita
+      facilis fugit, in ipsum itaque maiores possimus praesentium provident quos ratione sequi temporibus vitae
+      voluptate!
+    </li>
+    <li>Ad atque consequuntur, cupiditate error facere impedit in incidunt laboriosam magni maiores necessitatibus nisi
+      odio quia quo quod sequi sint voluptate? Amet ea itaque nihil numquam placeat! Hic, quasi tempore.
+    </li>
+    <li>Asperiores, autem dicta distinctio ducimus ea fugiat libero maiores, minima non nulla numquam pariatur, quia
+      quibusdam similique ullam voluptas voluptates voluptatibus. Exercitationem fugiat molestias quas quia reiciendis
+      veniam. Dolorum, iure?
+    </li>
+    <li>Alias aliquam aliquid amet at beatae consectetur debitis dolore et ex facilis, fuga harum impedit in incidunt
+      iste molestias natus nostrum nulla quaerat quas recusandae reiciendis repudiandae sapiente soluta vel.
+    </li>
+    <li>Ab accusamus aliquam autem dolorum, ducimus esse eveniet in laborum quod reiciendis suscipit veritatis? A
+      aliquid autem consequatur deleniti in molestiae nam praesentium quam quasi reprehenderit repudiandae sequi
+      tempore, veritatis?
+    </li>
+  </ul>
+
+
+
+
   <!--[if IE]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
